test/parse_error/string_interpolation.pi
component Component {
  let fail = #String;

  <div class="Section $(if fail "A" else "B")">
    {fail}
  </div>
}
